--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,20 @@
     transform: rotate(360deg);
   }
 }
+
+.accordian-container {
+  height: auto;
+  width: 400px;
+  background-color: grey;
+  padding: 10px;
+  margin: auto;
+}
+
+.accordian-header {
+  width: 100%;
+  height: 30px;
+}
+
+.toggle-button {
+  margin: 15px;
+}
